# src/app/services/models.ts
@@ -2,5 +2,3 @@ export { StatsDto } from './models/stats-dto';
 export { MatchDto } from './models/match-dto';
 export { JoueurDto } from './models/joueur-dto';
 export { EquipeDto } from './models/equipe-dto';
-export { InputSource } from './models/input-source';
-export { Resource } from './models/resource';
