# src/app/services/models/resource.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-import { InputSource } from './input-source';
-export interface Resource {
-  resourceInputSource?: InputSource;
-  resourceLoadTimeStamp?: number;
-}
